# cardcrank-cpp

./: .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
docs/: GAME_RULES.md
include/crank/: card.hpp  deck.hpp  lib.hpp  rules.hpp  table.hpp  tui_components.hpp  tui_wrapper.hpp
source/: lib.cpp  main.cpp  tui_main.cpp
source/crank/: card.cpp  deck.cpp  lib.cpp  rules.cpp  table.cpp  tui_components.cpp  tui_wrapper.cpp
test/: CMakeLists.txt
test/source/: cardcrank-cpp_test.cpp
